# temporalvec

./: .gitignore  README.md  pyproject.toml
benchmarks/: datasets.py  run.py
benchmarks/results/: .gitkeep
paper/: temporal-encoding-explainer.html  what-it-does.html
temporalvec/: __init__.py  encode.py  hybrid.py
tests/: test_encode.py  test_hybrid.py
