[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporalvec"
version = "0.1.0"
description = "Circular temporal encoding for vector databases — add time-aware search without changing your embedding model."
readme = "README.md"
authors = [
    {name = "Nous Research", email = "research@nousresearch.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
benchmark = [
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "faiss-cpu>=1.7",
]

[project.urls]
Homepage = "https://github.com/totalwindupflightsystems/temporalvec"
Repository = "https://github.com/totalwindupflightsystems/temporalvec"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
